Solve the connection error between html and css

--- a/flask-server/templates/index.html
+++ b/flask-server/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link href="../static/index.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap">
     <title>Nav bar</title>
     <script src="https://kit.fontawesome.com/3c939970e6.js" crossorigin="anonymous"></script>
